Fetching data and css for mobile

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <main class="main">
     <div class="advice">
       <span class="advice__id">
-        Advice #117
       </span>
       <blockquote class="advice__quote">
         <p class="advice__content">
-          "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi reprehenderit, nam accusantium nihil labore ducimus sit in quos magni accusamus non nesciunt tempore repellendus, assumenda neque incidunt harum nulla unde?"
         </p>
       </blockquote>
       <div class="advice__divider">
@@ -32,5 +30,7 @@
       Coded by <a href="#">Your Name Here</a>.
     </div>
   </footer>
+
+  <script src="src/js/main.js"></script>
 </body>
 </html>
